welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:4: error: type lightGray is not a member of object java.awt.Color
setCouleurBrosse(c:Color.lightGray);
                         ^