welcome.lessons.welcome.loopfor.LoopStairs.scala.code
droite();
baisseBrosse();
setCouleurBrosse(c:Color.lightGray);
for ( i<-1 to 4){
	avance();
}
